Fix not showing gallery image when metadata status is failed

--- a/src/assets/less/components/_comments.less
+++ b/src/assets/less/components/_comments.less
@@ -2,6 +2,8 @@
     padding-left: 0.75rem;
     background-color: #f8f8f8;
     border-left: 2px solid #e2e2e2;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .comment-login {
