--- a/src/assets/less/components/_post.less
+++ b/src/assets/less/components/_post.less
@@ -66,6 +66,7 @@
     margin-top: 1rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    border-radius: 5px;
 }
 
 .popover-tooltip {
